style: enhance CSS layouts, fix navbar alignment and remove horizontal scroll

--- a/frontEnd/src/styles/AboutUs.css
+++ b/frontEnd/src/styles/AboutUs.css
@@ -31,7 +31,7 @@
   .aboutUs-block {
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap:2rem
   }
   
   .aboutUs-section {
