--- a/frontEnd/src/styles/index.css
+++ b/frontEnd/src/styles/index.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
 
+#root {
+  overflow-x: hidden;
+  width: 100%;
+}
 body {
   font-family: "Poppins", sans-serif;
 }
